kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      nodeSelector:
        homework: "true"
      volumes:
        - name: shared-volume
          emptyDir: {}
      containers:
        - name: web-server
          image: python:3.9-slim
          command: ['sh', '-c']
          args:
            - |
              cd /homework
              python3 -m http.server 8000
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          lifecycle:
            preStop:
              exec:
                command: ['sh', '-c', 'rm -f /homework/index.html && echo "index.html has been deleted from /homework"']
